--- a/src/app/components/account-settings/loyalty-points/loyalty-points.component.html
+++ b/src/app/components/account-settings/loyalty-points/loyalty-points.component.html
@@ -9,24 +9,27 @@
                             <div class="table-loyal card">
                                 <div class="head-loyal-info card-header">
                                     <h4 class="title-points">Points Total</h4>
-                                    <h3 class="value-points">$48.00</h3>
+                                    <h3 class="value-points">${{total|number:'.1-2'}}</h3>
                                 </div>
                                 <div class="content-points card-body">
                                     <table class="table">
-
                                         <tbody>
-                                            <tr>
+                                            <tr  *ngFor="let item of loyalityData">
                                                 <td>
-                                                    <h4 class="title-data-points">Bonus</h4>
+                                                    <h4 class="title-data-points">Order:{{item.orderID}}</h4>
                                                     <p class="summary-points">
-                                                        <span class="date-points">12/20/2021</span>
-                                                        <span class="cate-points">Adjustment</span></p>
+                                                        <span class="date-points">{{item.transactionDate|date}}</span>
+                                                        <span class="cate-points">{{item.pointTransactionType.pointTransactionTypeDescription}}</span>
+                                                    </p>
                                                 </td>
                                                 <td>
-                                                    <p class="price-data bonus">+$5.00</p>
+
+                                                    <p *ngIf="item.pointTransactionType.pointTransactionTypeDescription=='Adjustment' || item.pointTransactionType.pointTransactionTypeDescription=='Point Redemption'" class="price-data cut-bonus">-{{item.formattedAmount}}</p>
+                                                    <!-- <p *ngIf="item.pointTransactionType.pointTransactionTypeDescription=='Point Redemption'" class="price-data cut-bonus">-{{item.formattedAmount}}</p> -->
                                                 </td>
+
                                             </tr>
-                                            <tr>
+                                            <!-- <tr>
                                                 <td>
                                                     <h4 class="title-data-points">Order: 52987</h4>
                                                     <p class="summary-points">
@@ -95,7 +98,7 @@
                                                 <td>
                                                     <p class="price-data bonus">+$8.00</p>
                                                 </td>
-                                            </tr>
+                                            </tr> -->
 
                                         </tbody>
                                     </table>
@@ -125,6 +128,7 @@
                 </div>
             </div>
 
+
             <div class="col-sm-4 enrollment-pages profile-page  col-lg-pull-4 ">
                 <div class="enrollment-page profile-page">
                     <div class="showsidebar toggle-sidebar hidden-lg">
@@ -135,6 +139,8 @@
 
                 </div>
             </div>
+
+
         </div>
     </div>
 </section>
